reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/expert-config/expert-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expert-api
  namespace: expert
spec:
  selector:
    matchLabels:
      app: deployment-expert-api
  replicas: 1
  template:
    metadata:
      labels:
        app: deployment-expert-api
    spec:
      containers:
      - name: expert-api
        image: 10.157.112.207:5001/expert/expert_api:latest
        imagePullPolicy: Always
        resources: {}
      imagePullSecrets:
      - name: meinenghua
      nodeSelector: 
        node-tag: gpu-001
