reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/expert-config/expert-api/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-expert-api
  namespace: expert
spec:
  selector:
    app: deployment-expert-api
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7001
  type: ClusterIP
