reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/expert-config/expert-api/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-expert-api
  namespace: expert
spec:
  selector:
    app: deployment-expert-api
  ports:
    - protocol: TCP
      nodePort: 32301
      port: 7001
      targetPort: 7001
  type: NodePort
